java_code/src/nuxt/runtime/NuxtParser.java
// Generated from NuxtParser.g4 by ANTLR 4.9.3

package nuxt.runtime;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class NuxtParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OutStart=1, TagStart=2, Other=3, OutStart2=4, TagStart2=5, OutEnd=6, TagEnd=7, 
		Str=8, DotDot=9, Dot=10, NEq=11, Eq=12, EqSign=13, GtEq=14, Gt=15, LtEq=16, 
		Lt=17, Minus=18, Pipe=19, Col=20, Comma=21, OPar=22, CPar=23, OBr=24, 
		CBr=25, QMark=26, Mul=27, Div=28, Plus=29, Add=30, PathSep=31, DoubleNum=32, 
		LongNum=33, WS=34, Use=35, Param=36, Service=37, Json=38, Xml=39, As=40, 
		CaptureStart=41, CaptureEnd=42, CommentStart=43, CommentEnd=44, RawStart=45, 
		IfStart=46, Elseif=47, IfEnd=48, UnlessStart=49, UnlessEnd=50, Else=51, 
		Contains=52, CaseStart=53, CaseEnd=54, When=55, Cycle=56, ForStart=57, 
		ForEnd=58, In=59, And=60, Or=61, TableStart=62, TableEnd=63, Assign=64, 
		True=65, False=66, Nil=67, Include=68, With=69, Offset=70, Continue=71, 
		Reversed=72, Empty=73, Blank=74, EndId=75, IdChain=76, Id=77, Type=78, 
		RawEnd=79, OtherRaw=80;
	public static final int
		RULE_parse = 0, RULE_block = 1, RULE_atom = 2, RULE_tag = 3, RULE_use_tag = 4, 
		RULE_param_tag = 5, RULE_code_tag = 6, RULE_other_tag = 7, RULE_continue_tag = 8, 
		RULE_other_tag_block = 9, RULE_raw_tag = 10, RULE_raw_body = 11, RULE_comment_tag = 12, 
		RULE_other_than_tag_start = 13, RULE_other_than_tag_start_and_ifs = 14, 
		RULE_if_tag = 15, RULE_elseif_tag = 16, RULE_else_tag = 17, RULE_unless_tag = 18, 
		RULE_case_tag = 19, RULE_when_tag = 20, RULE_cycle_tag = 21, RULE_cycle_group = 22, 
		RULE_for_tag = 23, RULE_for_array = 24, RULE_for_range = 25, RULE_for_block = 26, 
		RULE_for_attribute = 27, RULE_attribute = 28, RULE_table_tag = 29, RULE_capture_tag = 30, 
		RULE_include_tag = 31, RULE_file_name_or_output = 32, RULE_include_params = 33, 
		RULE_output = 34, RULE_print = 35, RULE_filter = 36, RULE_params = 37, 
		RULE_param_expr = 38, RULE_assignment = 39, RULE_expr = 40, RULE_term = 41, 
		RULE_lookup = 42, RULE_type = 43, RULE_id = 44, RULE_as = 45, RULE_id2 = 46, 
		RULE_resource = 47, RULE_param_type = 48, RULE_index = 49, RULE_other_tag_parameters = 50, 
		RULE_other_than_tag_end = 51, RULE_filename = 52, RULE_tagStart = 53, 
		RULE_outStart = 54, RULE_other = 55;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "block", "atom", "tag", "use_tag", "param_tag", "code_tag", 
			"other_tag", "continue_tag", "other_tag_block", "raw_tag", "raw_body", 
			"comment_tag", "other_than_tag_start", "other_than_tag_start_and_ifs", 
			"if_tag", "elseif_tag", "else_tag", "unless_tag", "case_tag", "when_tag", 
			"cycle_tag", "cycle_group", "for_tag", "for_array", "for_range", "for_block", 
			"for_attribute", "attribute", "table_tag", "capture_tag", "include_tag", 
			"file_name_or_output", "include_params", "output", "print", "filter", 
			"params", "param_expr", "assignment", "expr", "term", "lookup", "type", 
			"id", "as", "id2", "resource", "param_type", "index", "other_tag_parameters", 
			"other_than_tag_end", "filename", "tagStart", "outStart", "other"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'{{'", "'${'", null, null, null, "'..'", "'.'", 
			null, "'=='", "'='", "'>='", "'>'", "'<='", "'<'", "'-'", "'|'", "':'", 
			"','", "'('", "')'", "'['", "']'", "'?'", "'*'", "'/'", "'+'", "'@'", 
			null, null, null, null, "'use'", "'param'", "'service'", "'json'", "'xml'", 
			"'as'", "'capture'", "'endcapture'", "'comment'", "'endcomment'", null, 
			"'if'", "'elseif'", "'endif'", "'unless'", "'endunless'", "'else'", "'contains'", 
			"'case'", "'endcase'", "'when'", "'cycle'", "'for'", "'endfor'", "'in'", 
			"'and'", "'or'", "'tablerow'", "'endtablerow'", "'assign'", "'true'", 
			"'false'", null, "'include'", "'with'", "'offset'", "'continue'", "'reversed'", 
			"'empty'", "'blank'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OutStart", "TagStart", "Other", "OutStart2", "TagStart2", "OutEnd", 
			"TagEnd", "Str", "DotDot", "Dot", "NEq", "Eq", "EqSign", "GtEq", "Gt", 
			"LtEq", "Lt", "Minus", "Pipe", "Col", "Comma", "OPar", "CPar", "OBr", 
			"CBr", "QMark", "Mul", "Div", "Plus", "Add", "PathSep", "DoubleNum", 
			"LongNum", "WS", "Use", "Param", "Service", "Json", "Xml", "As", "CaptureStart", 
			"CaptureEnd", "CommentStart", "CommentEnd", "RawStart", "IfStart", "Elseif", 
			"IfEnd", "UnlessStart", "UnlessEnd", "Else", "Contains", "CaseStart", 
			"CaseEnd", "When", "Cycle", "ForStart", "ForEnd", "In", "And", "Or", 
			"TableStart", "TableEnd", "Assign", "True", "False", "Nil", "Include", 
			"With", "Offset", "Continue", "Reversed", "Empty", "Blank", "EndId", 
			"IdChain", "Id", "Type", "RawEnd", "OtherRaw"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NuxtParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private boolean isLiquid = true;
	    private boolean isLiquid(){
	        return isLiquid;
	    }

	    private boolean isJekyll(){
	        return !isLiquid;
	    }

	    public NuxtParser(TokenStream input, boolean isLiquid) {
	        this(input);
	        this.isLiquid = isLiquid;
	    }


	public NuxtParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(NuxtParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			block();
			setState(113);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<AtomContext> atom() {
			return getRuleContexts(AtomContext.class);
		}
		public AtomContext atom(int i) {
			return getRuleContext(AtomContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(115);
					atom();
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomContext extends ParserRuleContext {
		public AtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atom; }
	 
		public AtomContext() { }
		public void copyFrom(AtomContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Atom_outputContext extends AtomContext {
		public OutputContext output() {
			return getRuleContext(OutputContext.class,0);
		}
		public Atom_outputContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterAtom_output(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitAtom_output(this);
		}
	}
	public static class Atom_assignmentContext extends AtomContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Atom_assignmentContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterAtom_assignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitAtom_assignment(this);
		}
	}
	public static class Atom_tagContext extends AtomContext {
		public TagContext tag() {
			return getRuleContext(TagContext.class,0);
		}
		public Atom_tagContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterAtom_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitAtom_tag(this);
		}
	}
	public static class Atom_othersContext extends AtomContext {
		public OtherContext other() {
			return getRuleContext(OtherContext.class,0);
		}
		public Atom_othersContext(AtomContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterAtom_others(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitAtom_others(this);
		}
	}

	public final AtomContext atom() throws RecognitionException {
		AtomContext _localctx = new AtomContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atom);
		try {
			setState(125);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new Atom_tagContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				tag();
				}
				break;
			case 2:
				_localctx = new Atom_outputContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				output();
				}
				break;
			case 3:
				_localctx = new Atom_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(123);
				assignment();
				}
				break;
			case 4:
				_localctx = new Atom_othersContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(124);
				other();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagContext extends ParserRuleContext {
		public Use_tagContext use_tag() {
			return getRuleContext(Use_tagContext.class,0);
		}
		public Raw_tagContext raw_tag() {
			return getRuleContext(Raw_tagContext.class,0);
		}
		public Comment_tagContext comment_tag() {
			return getRuleContext(Comment_tagContext.class,0);
		}
		public If_tagContext if_tag() {
			return getRuleContext(If_tagContext.class,0);
		}
		public Unless_tagContext unless_tag() {
			return getRuleContext(Unless_tagContext.class,0);
		}
		public Case_tagContext case_tag() {
			return getRuleContext(Case_tagContext.class,0);
		}
		public Cycle_tagContext cycle_tag() {
			return getRuleContext(Cycle_tagContext.class,0);
		}
		public For_tagContext for_tag() {
			return getRuleContext(For_tagContext.class,0);
		}
		public Table_tagContext table_tag() {
			return getRuleContext(Table_tagContext.class,0);
		}
		public Capture_tagContext capture_tag() {
			return getRuleContext(Capture_tagContext.class,0);
		}
		public Include_tagContext include_tag() {
			return getRuleContext(Include_tagContext.class,0);
		}
		public Continue_tagContext continue_tag() {
			return getRuleContext(Continue_tagContext.class,0);
		}
		public Param_tagContext param_tag() {
			return getRuleContext(Param_tagContext.class,0);
		}
		public Code_tagContext code_tag() {
			return getRuleContext(Code_tagContext.class,0);
		}
		public Other_tagContext other_tag() {
			return getRuleContext(Other_tagContext.class,0);
		}
		public TagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterTag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitTag(this);
		}
	}

	public final TagContext tag() throws RecognitionException {
		TagContext _localctx = new TagContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tag);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				use_tag();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				raw_tag();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				comment_tag();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				if_tag();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				unless_tag();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				case_tag();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(133);
				cycle_tag();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(134);
				for_tag();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(135);
				table_tag();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(136);
				capture_tag();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(137);
				include_tag();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(138);
				continue_tag();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(139);
				param_tag();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(140);
				code_tag();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(141);
				other_tag();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Use() { return getToken(NuxtParser.Use, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ResourceContext resource() {
			return getRuleContext(ResourceContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(NuxtParser.TagEnd, 0); }
		public TerminalNode As() { return getToken(NuxtParser.As, 0); }
		public AsContext as() {
			return getRuleContext(AsContext.class,0);
		}
		public Use_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterUse_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitUse_tag(this);
		}
	}

	public final Use_tagContext use_tag() throws RecognitionException {
		Use_tagContext _localctx = new Use_tagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_use_tag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			tagStart();
			setState(145);
			match(Use);
			setState(146);
			type();
			setState(147);
			resource();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==As) {
				{
				setState(148);
				match(As);
				setState(149);
				as();
				}
			}

			setState(152);
			match(TagEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Param() { return getToken(NuxtParser.Param, 0); }
		public Param_typeContext param_type() {
			return getRuleContext(Param_typeContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(NuxtParser.TagEnd, 0); }
		public Param_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterParam_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitParam_tag(this);
		}
	}

	public final Param_tagContext param_tag() throws RecognitionException {
		Param_tagContext _localctx = new Param_tagContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			tagStart();
			setState(155);
			match(Param);
			setState(156);
			param_type();
			setState(157);
			match(TagEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public Other_than_tag_start_and_ifsContext other_than_tag_start_and_ifs() {
			return getRuleContext(Other_than_tag_start_and_ifsContext.class,0);
		}
		public TerminalNode TagEnd() { return getToken(NuxtParser.TagEnd, 0); }
		public Code_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterCode_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitCode_tag(this);
		}
	}

	public final Code_tagContext code_tag() throws RecognitionException {
		Code_tagContext _localctx = new Code_tagContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_code_tag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			tagStart();
			setState(160);
			other_than_tag_start_and_ifs();
			setState(161);
			match(TagEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Other_tagContext extends ParserRuleContext {
		public TagStartContext tagStart() {
			return getRuleContext(TagStartContext.class,0);
		}
		public TerminalNode Id() { return getToken(NuxtParser.Id, 0); }
		public TerminalNode TagEnd() { return getToken(NuxtParser.TagEnd, 0); }
		public Other_tag_parametersContext other_tag_parameters() {
			return getRuleContext(Other_tag_parametersContext.class,0);
		}
		public Other_tag_blockContext other_tag_block() {
			return getRuleContext(Other_tag_blockContext.class,0);
		}
		public Other_tagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_other_tag; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).enterOther_tag(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof NuxtParserListener ) ((NuxtParserListener)listener).exitOther_tag(this);
		}
	}

	public final Other_tagContext other_tag() throws RecognitionException {
		Other_tagContext _localctx = new Other_tagContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_other_tag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			tagStart();
			setState(164);
			match(Id);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OutStart) | (1L << TagStart) | (1L << Other) | (1L << OutStart2) | (1L << TagStart2) | (1L << OutEnd) | (1L << Str) | (1L << DotDot) | (1L << Dot) | (1L << NEq) | (1L << Eq) | (1L << EqSign) | (1L << GtEq) | (1L << Gt) | (1L << LtEq) | (1L << Lt) | (1L << Minus) | (1L << Pipe) | (1L << Col) | (1L << Comma) | (1L << OPar) | (1L << CPar) | (1L << OBr) | (1L << CBr) | (1L << QMark) | (1L << Mul) | (1L << Div) | (1L << Plus) | (1L << Add) | (1L << PathSep) | (1L << DoubleNum) | (1L << LongNum) | (1L << WS) | (1L << Use) | (1L << Param) | (1L << Service) | (1L << Json) | (1L << Xml) | (1L << As) | (1L << CaptureStart) | (1L << CaptureEnd) | (1L << CommentStart) | (1L << CommentEnd) | (1L << RawStart) | (1L << IfStart) | (1L << Elseif) | (1L << IfEnd) | (1L << UnlessStart) | (1L << UnlessEnd) | (1L << Else) | (1L << Contains) | (1L << CaseStart) | (1L << CaseEnd) | (1L << When) | (1L << Cycle) | (1L << ForStart) | (1L << ForEnd) | (1L << In) | (1L << And) | (1L << Or) | (1L << TableStart) | (1L << TableEnd))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (Assign - 64)) | (1L << (True - 64)) | (1L << (False - 64)) | (1L << (Nil - 64)) | (1L << (Include - 64)) | (1L << (With - 64)) | (1L << (Offset - 64)) | (1L << (Continue - 64)) | (1L << (Reversed - 64)) | (1L << (Empty - 64)) | (1L << (Blank - 64)) | (1L << (EndId - 64)) | (1L << (IdChain - 64)) | (1L << (Id - 64)) | (1L << (Type - 64)) | (1L << (RawEnd - 64)) | (1L << (OtherRaw - 64)))) != 0)) {
				{
				setState(165);
				other_tag_parameters();
				}
			}
